# agent-marketplace

./: .env.example  .gitmodules  Dockerfile  Procfile  README.md  app.py  config.py  pyproject.toml
.github/workflows/: deploy.yml  sync-common.yml
models/: __init__.py  requests.py
router/: a2a_caller.py  proxy.py  registry.py  router_agent.py  streaming.py
routers/: admin.py  agents.py  routing.py
